--- a/index.ipynb
+++ b/index.ipynb
@@ -290,22 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.460742946012674"
+       "0.032504542600593544"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linreg.score(X_train_scaled, y_train)"
+    "linreg.score(X_train_scaled, y_train)\n",
+    "linreg.score(X_test_scaled,y_test)"
    ]
   },
   {
